# PYTS

./: .env.example  .gitignore  API_DOCUMENTATION.md  DOCKER.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  README.md  TASK_15.2_SUMMARY.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt
.kiro/specs/persian-transcription-api/: checkpoint-6-summary.md  design.md  requirements.md  task-8.1-summary.md  tasks.md
app/: __init__.py  api_models.py  audio_processor.py  config.py  job_manager.py  logging_config.py  main.py  models.py  transcription_service.py  whisper_engine.py
docker/: .gitkeep
dotnet/: ARCHITECTURE.md  DOCKER_COMPLETE_GUIDE.md  DOCKER_INTEGRATION_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SETUP.md  GETTING_STARTED_DOCKER.md  LOCAL_DEVELOPMENT_SETUP.md  README_DOCKER.md  SETUP_COMPLETE.md  WHISPER_TROUBLESHOOTING.md  build-and-run.sh  docker-compose.yml  rebuild-fix-whisper.sh  test-docker.sh
dotnet/TranscriptionApi/: .dockerignore  Dockerfile  TranscriptionApi.csproj  TranscriptionApi.http  appsettings.json
dotnet/TranscriptionApi/Controllers/: StreamingTranscriptionController.cs  TranscriptionController.cs
dotnet/TranscriptionApi/Services/: WhisperModelService.cs
tests/: __init__.py  test_api_documentation.py  test_audio_processor.py  test_batch_endpoints.py  test_config.py  test_health_integration.py  test_job_manager.py  test_main.py  test_models.py  test_transcription_service.py  test_websocket_streaming.py  test_whisper_engine.py
